# maze_kluster

./: .gitignore  LICENSE  README.md  connection.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
analysis/: evaluate.ipynb  explore.ipynb  style.py
analysis/css/: index.css
data/: generate.py  generate_eval.py  maze_runs.parquet  mazes.json
data/eval_runs/: eval_inf.json  eval_mm20.json  eval_mm22.json  eval_mm24.json  eval_mm26.json  eval_mm28.json  eval_mm30.json  eval_mm32.json  eval_mm34.json  eval_mm36.json  eval_mm38.json  eval_mm40.json  eval_mm42.json
data/runs/: dig_down_baseline_20260613_213355.jsonl  easy_deal_baseline_20260613_213350.jsonl  egg_baseline_20260613_213357.jsonl  exit_baseline_20260613_213348.jsonl  hello_maze_baseline_20260613_213347.jsonl  loops_baseline_20260613_213349.jsonl  michiel_baseline_20260613_213352.jsonl
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/_static/: custom.css
docs/sphinx/source/analysis/: evaluation.rst  exploration.rst  index.rst
docs/sphinx/source/api/: bots.rst  data.rst  graph.rst  index.rst  models.rst  tui.rst
models/: gbt.pkl  generate.py  gp.pkl  rf.pkl
scripts/: generate_docs.sh  test_ci.sh  upload_docs.sh  upload_library.sh
src/maze_kluster/: __init__.py  __main__.py  api.py  enums.py  graph.py  metrics.py
src/maze_kluster/bots/: __init__.py  base.py  baseline.py  smart.py
src/maze_kluster/data/: collector.py
src/maze_kluster/models/: __init__.py  features.py  gbt.py  gp.py  protocol.py  rf.py
src/maze_kluster/tui/: app.py
tests/: README.md
tests/data_collection/: test_collector.py  test_runlog.py
tests/evaluation_metrics/: test_metrics.py
tests/feature_engineering/: test_features.py
tests/fixtures/: generate_fixtures.py  sample_run.jsonl  sample_runs.parquet  test_maze_responses.json
tests/graph_and_bot/: test_baseline.py  test_graph.py
tests/smart_bot_and_scorers/: conftest.py  test_scorers.py  test_smart_bot.py
tests/tui/: test_bot_registry.py  test_runlog_replay.py  test_tile_rendering.py
(+11 files in other folders)
